--- a/lab3/src/makefile
+++ b/lab3/src/makefile
@@ -1,10 +1,10 @@
 CC=gcc
 CFLAGS=-I.
 
-sequential_min_max : utils.o find_min_max.o utils.h find_min_max.h
+sequential_min_max : utils.o find_min_max.o
 	$(CC) -o sequential_min_max find_min_max.o utils.o sequential_min_max.c $(CFLAGS)
 
-parallel_min_max : utils.o find_min_max.o utils.h find_min_max.h
+parallel_min_max : utils.o find_min_max.o
 	$(CC) -o parallel_min_max utils.o find_min_max.o parallel_min_max.c $(CFLAGS)
 
 utils.o : utils.h
@@ -13,5 +13,11 @@ utils.o : utils.h
 find_min_max.o : utils.h find_min_max.h
 	$(CC) -o find_min_max.o -c find_min_max.c $(CFLAGS)
 
+run_sequential : run_sequential.c
+	$(CC) -o run_sequential run_sequential.c $(CFLAGS)
+
+
+all : parallel_min_max sequential_min_max run_sequential
+
 clean :
-	rm utils.o find_min_max.o sequential_min_max parallel_min_max
+	rm utils.o find_min_max.o sequential_min_max parallel_min_max run_sequential
